--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.15.2"
+    "@astrojs/tailwind": "^6.0.2",
+    "astro": "^5.15.2",
+    "lucide-astro": "^0.548.0",
+    "tailwindcss": "^3.4.18"
   }
 }
