--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.3.9",
+    "@astrojs/sitemap": "^3.6.0",
     "@astrojs/tailwind": "^6.0.2",
     "astro": "^5.15.2",
+    "fuse.js": "^7.1.0",
     "lucide-astro": "^0.548.0",
     "tailwindcss": "^3.4.18"
   }
