feat: Integrate environment variables for site config, social links, and meta tags

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,23 @@
+# Site Configuration
+PUBLIC_SITE_URL=https://farhan.dev
+PUBLIC_SITE_NAME=farhan.dev
+PUBLIC_AUTHOR_NAME=Your Name
+PUBLIC_AUTHOR_EMAIL=your.email@example.com
+PUBLIC_TWITTER_HANDLE=@yourhandle
+PUBLIC_LINKEDIN_URL=https://linkedin.com/in/yourprofile
+PUBLIC_GITHUB_URL=https://github.com/yourusername
+
+# Analytics (Optional - add when ready to track)
+# PUBLIC_GA_TRACKING_ID=G-XXXXXXXXXX
+# PUBLIC_PLAUSIBLE_DOMAIN=yourdomain.com
+# PUBLIC_UMAMI_WEBSITE_ID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
+
+# Newsletter Integration (Optional - for Buttondown, ConvertKit, etc.)
+# PUBLIC_NEWSLETTER_API_URL=https://api.buttondown.email/v1/subscribers
+# PUBLIC_NEWSLETTER_API_KEY=your_api_key_here
+
 # Giscus configuration (Public runtime)
-# Copy to .env and fill values from https://giscus.app after installing the GitHub app
+# Get values from https://giscus.app after installing the GitHub app
 
 # Required
 PUBLIC_GISCUS_REPO=owner/repo
