--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "astro": "^5.15.2",
     "fuse.js": "^7.1.0",
     "lucide-astro": "^0.548.0",
+    "satori": "^0.18.3",
+    "sharp": "^0.34.4",
     "tailwindcss": "^3.4.18"
   }
 }
