feat: implement AI nugget generator with GitHub PR integration
- Add package.json for project configuration and dependencies
- Create GitHub API integration for creating pull requests
- Implement main worker logic for generating nuggets and handling requests
- Add OpenAI API integration for generating nugget content
- Define types for environment variables, requests, and responses
- Implement utility functions for slug generation, frontmatter formatting, and rate limiting
- Configure TypeScript settings and Wrangler for deployment
- Set up KV namespace for storing generated nuggets and logs

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "worker:dev": "wrangler dev --config workers/ai-generator/wrangler.toml",
+    "worker:deploy": "wrangler deploy --config workers/ai-generator/wrangler.toml",
+    "worker:tail": "wrangler tail --config workers/ai-generator/wrangler.toml"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.9",
