feat: add environment reference to generate-nugget job in workflow

--- a/.github/workflows/generate-nuggets.yml
+++ b/.github/workflows/generate-nuggets.yml
@@ -24,6 +24,7 @@ permissions:
 jobs:
   generate-nugget:
     runs-on: ubuntu-latest
+    environment: master  # Reference the GitHub Environment
     
     steps:
       - name: Checkout repository
