--- a/workers/ai-generator/wrangler.toml
+++ b/workers/ai-generator/wrangler.toml
@@ -3,10 +3,19 @@ main = "src/index.ts"
 compatibility_date = "2025-10-30"
 compatibility_flags = ["nodejs_compat"]
 
+# Cron triggers (Mon/Wed/Fri 09:00 UTC = 15:00 Asia/Dhaka)
+[triggers]
+crons = ["0 9 * * 1,3,5"] # Monday, Wednesday, Friday at 09:00 UTC
+
 # KV namespace for idea seeds and generation logs
 [[kv_namespaces]]
 binding = "NUGGET_STORE"
 id = "da62f46128c34684b5c9109d4d631b17" # Replace with actual KV namespace ID after creation
+
+# KV namespace for idea queue (Stage 1: scheduler)
+[[kv_namespaces]]
+binding = "IDEA_QUEUE"
+id = "" # TODO: Create via `wrangler kv:namespace create "IDEA_QUEUE"` and update this ID
 
 # Environment variables (use wrangler secret for sensitive values)
 [vars]
