--- a/workers/ai-generator/package.json
+++ b/workers/ai-generator/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy",
-    "tail": "wrangler tail"
+    "tail": "wrangler tail",
+    "load-ideas": "tsx scripts/load-ideas-batch.ts"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241127.0",
-    "wrangler": "^3.92.0"
+    "tsx": "^4.19.1",
+    "wrangler": "^3.114.15"
   }
 }
