--- a/workers/ai-generator/wrangler.toml
+++ b/workers/ai-generator/wrangler.toml
@@ -3,9 +3,14 @@ main = "src/index.ts"
 compatibility_date = "2025-10-30"
 compatibility_flags = ["nodejs_compat"]
 
-# Cron triggers (Mon/Wed/Fri 09:00 UTC = 15:00 Asia/Dhaka)
+# Cron triggers
+# - Mon/Wed/Fri 09:00 UTC: Generate new content
+# - Tue/Thu 09:00 UTC: Check PR merge status
 [triggers]
-crons = ["0 9 * * 1,3,5"] # Monday, Wednesday, Friday at 09:00 UTC
+crons = [
+	"0 9 * * 1,3,5", # Monday, Wednesday, Friday - content generation
+	"0 9 * * 2,4"    # Tuesday, Thursday - PR status check
+]
 
 # KV namespace for idea seeds and generation logs
 [[kv_namespaces]]
