Add observability configuration to wrangler.toml.example and update package-lock.json for peer dependency

--- a/workers/ai-generator/wrangler.toml.example
+++ b/workers/ai-generator/wrangler.toml.example
@@ -42,3 +42,17 @@ GITHUB_BRANCH_PREFIX = "nuggets"
 [dev]
 port = 8787
 
+[observability]
+enabled = false
+head_sampling_rate = 1
+
+[observability.logs]
+enabled = true
+head_sampling_rate = 1
+persist = true
+invocation_logs = true
+
+[observability.traces]
+enabled = false
+persist = true
+head_sampling_rate = 1
